--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,7 +36,7 @@
 <div class="container">
     <h1 class="text-center">Clasificador de Cancer de mama</h1>
     <p class="text-center">
-        Utiliza esta herramienta basada en inteligencia artificial para detectar malaria a partir de imágenes histopatológicas de cáncer de mama.
+        Utiliza esta herramienta basada en inteligencia artificial para detectar tumores benignos o malignos a partir de imágenes histopatológicas de cáncer de mama.
     </p>
     <hr>
     <h5>Pasos para usar el clasificador:</h5>
